# PotatoEngine

./: .gitattributes  .gitignore  .gitmodules  BBox.h  CMakeLists.txt  Camera.cpp  Camera.h  GLObject.cpp  GLObject.h  Game.cpp  Game.h  KdTree.cpp  KdTree.h  Mesh.cpp  Mesh.h  MeshModel.cpp  MeshModel.h  Model.cpp  Model.h  ModelCreator.cpp  ModelCreator.h  PointCloudModel.cpp  PointCloudModel.h  PotatoEngine.sln  PotatoEngine.vcxproj  PotatoEngine.vcxproj.filters  README.md  SinglePointModel.cpp  SinglePointModel.h  build.sh  main.cpp
.github/workflows/: cmake.yml  msbuild.yml
ClosestPointQuery/: CMakeLists.txt  ClosestPointQuery.cpp  ClosestPointQuery.h  ClosestPointQuery.vcxproj  ClosestPointQuery.vcxproj.filters  HelperDraw.cpp  HelperDraw.h  UnitTests.cpp  UnitTests.h  backpack.obj__result_data.txt  dragon.obj__result_data.txt  dragon.obj__test_data.txt  main.cpp
Engine/: CMakeLists.txt
Engine/GLSLShaders/: modelFragmentShader.fs.glsl  modelFragmentShaderES.fs.glsl  modelVertexShaderES.vs.glsl
Engine/Src/: BBox.h  BVH.cpp  BVH.h  BVHModelCreator.cpp  BVHModelCreator.h  CMakeLists.txt  Camera.cpp  ClosestPointTest.cpp  GLObject.h  Game.cpp  Game.h  HelperDraw.cpp  HelperDraw.h  KdTree.h  Mesh.cpp  Mesh.h  MeshModel.cpp  MeshModel.h  MeshModelBVH.cpp  MeshModelBVH.h  Model.cpp  Model.h  ModelCreator.cpp  ModelCreator.h  PointCloudModel.cpp  PointCloudModel.h  PointCloudModelKdTree.cpp  PointCoudModelKdTree.h  SinglePointModel.cpp  SinglePointModel.h
Engine/Src/ShaderObject/: ShaderObject.cpp  ShaderObject.h  ShaderProgram.cpp
GLSLShaders/: fragmentShader.fs.glsl  modelFragmentShader.fs.glsl  modelVertexShader.vs.glsl  vertexShader.vs.glsl
QueryClosestPoint/: HelperDraw.cpp  QueryClosestPoint.cpp  QueryClosestPoint.h  QueryClosestPoint.vcxproj  QueryClosestPoint.vcxproj.filters  UnitTests.cpp  UnitTests.h  backpack.obj__result_data.txt  backpack.obj__test_data.txt  dragon.obj__result_data.txt  dragon.obj__test_data.txt  main.cpp  resultFile.txt  testFile.txt
SampleGame/: SampleGame.vcxproj  main.cpp
ShaderObject/: ShaderObject.cpp  ShaderProgram.cpp  ShaderProgram.h
Src/: BBox.h  BVH.cpp  BVH.h  ClosestPointTest.cpp  ClosestPointTest.h  HelperDraw.cpp  HelperDraw.h  KdTree.cpp  KdTree.h  KdTreeFixed.cpp  KdTreeFixed.h  Mesh.cpp  Mesh.h  MeshModel.cpp  MeshModel.h  MeshModelBVH.cpp  MeshModelBVH.h  Model.cpp  ModelCreator.h  PointCloudModel.cpp  PointCloudModel.h  Utilities.h
